--- a/src/index.html
+++ b/src/index.html
@@ -19,8 +19,20 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+        <section class="first-page">
+            <div class="header">
+                <h1>Coder Conf</h1>
+                <h3>Tehran, 28 August 2016</h3>
+            </div>
+            <p class="downward">⬇</p>
+        </section>
+
+        <section class="description-page">
+            <h2>ABOUT CODER CONF</h2>
+            <p>We have created PHP Conference at year ago and this year we are growing.</p>
+            <p>Developers meeting in Tehran for useful event with learning.</p>
+            <p>Coder Conf is open source community.</p>
+        </section>
 
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
