Changed color and size of content, Use irsans font

--- a/src/index.html
+++ b/src/index.html
@@ -19,20 +19,39 @@
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
 
+        <section class="caricature-page">
+        </section>
+
         <section class="first-page">
             <div class="header">
                 <h1>Coder Conf</h1>
-                <h3>Tehran, 28 August 2016</h3>
+                <h2>گردهمایی گسترده‌ برنامه‌نویسان ایران</h2>
+                <h2>در تهران</h2>
+                <h2>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
             </div>
-            <p class="downward">⬇</p>
+            <!--<p class="downward">⬇</p>-->
         </section>
 
         <section class="description-page">
-            <h2>ABOUT CODER CONF</h2>
-            <p>We have created PHP Conference at year ago and this year we are growing.</p>
-            <p>Developers meeting in Tehran for useful event with learning.</p>
-            <p>Coder Conf is open source community.</p>
+            <p>پس از برگزاری اولین همایش PHP در آخرین پنجشنبه مرداد ۱۳۹۴ در حال برگزاری همایش گسترده‌‌تر برنامه‌نویسی در ایران با نام Coder Conf هستیم.</p>
+            <p>            همایش Coder Conf پیش رو شامل دو بورد Server-side و Client-side خواهد بود. همچنین لازم به توضیح است بورد Server-side متشکل از زبان‌های PHP، Java، Node.js، Python و بورد Client-side شامل HTML، JavaScript و CSS است.</p>
         </section>
+
+        <section class="article-page">
+            <p>            جهت ارسال مقاله مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۵ تا ۱۰ خط) مقاله خود را به همراه کلمات کلیدی، تا تاریخ ۳۰ اردیبهشت برای ما ارسال نمایید.</p>
+            <p>            در صورت تایید اولیه مقاله‌ها می‌توانید مقاله نهایی خود را تا تاریخ ۳۰ خرداد برای ما ارسال نمایید تا در صورت تائید، مقاله‌ی شما با نام شما در کتاب الکترونیکی همایش منتشر شود.</p>
+            <p>مقاله‌های برتر توسط نویسنده در روز همایش ارائه خواهد شد.</p>
+            <p>همچنین می‌توانید در مورد فعالیت و پروژه‌های متن‌باز مرتبط با بورد‌های همایش مقاله ارسال نمایید.</p>
+
+            <h6 class="mail">ایمیل دریافت مقاله‌ها:<br/> review [at] coderconf [dot] org</h6>
+
+        </section>
+
+        <section class="coming-soon-page">
+            <h3>به زودی اطلاعات تکمیلی منتشر می‌شود.</h3>
+        </section>
+
+
 
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
