--- a/src/index.html
+++ b/src/index.html
@@ -23,13 +23,10 @@
         </section>
 
         <section class="first-page">
-            <div class="header">
-                <h1>Coder Conf</h1>
-                <h2>گردهمایی گسترده‌ برنامه‌نویسان ایران</h2>
-                <h2>در تهران</h2>
-                <h2>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
-            </div>
-            <!--<p class="downward">⬇</p>-->
+            <h1>Coder Conf</h1>
+            <h2>گردهمایی گسترده‌ برنامه‌نویسان ایران</h2>
+            <h2>در تهران</h2>
+            <h2>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
         </section>
 
         <section class="description-page">
@@ -38,13 +35,12 @@
         </section>
 
         <section class="article-page">
-            <p>            جهت ارسال مقاله مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۵ تا ۱۰ خط) مقاله خود را به همراه کلمات کلیدی، تا تاریخ ۳۰ اردیبهشت برای ما ارسال نمایید.</p>
+            <p>            جهت ارسال مقاله مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۳ تا ۱۰ خط) مقاله خود را به همراه کلمات کلیدی، تا تاریخ ۳۰ اردیبهشت برای ما ارسال نمایید.</p>
             <p>            در صورت تایید اولیه مقاله‌ها می‌توانید مقاله نهایی خود را تا تاریخ ۳۰ خرداد برای ما ارسال نمایید تا در صورت تائید، مقاله‌ی شما با نام شما در کتاب الکترونیکی همایش منتشر شود.</p>
             <p>مقاله‌های برتر توسط نویسنده در روز همایش ارائه خواهد شد.</p>
             <p>همچنین می‌توانید در مورد فعالیت و پروژه‌های متن‌باز مرتبط با بورد‌های همایش مقاله ارسال نمایید.</p>
 
-            <h6 class="mail">ایمیل دریافت مقاله‌ها:<br/> review [at] coderconf [dot] org</h6>
-
+            <h6 class="submit-text">جهت ارسال مقاله می‌توانید از <a href="http://goo.gl/forms/z4QtT1sQyU" target="_blank">اینجـــــا</a> اقدام نمایید.</h6>
         </section>
 
         <section class="coming-soon-page">
