Added Venue page with map

--- a/src/index.html
+++ b/src/index.html
@@ -43,10 +43,20 @@
             <h6 class="submit-text">جهت ارسال مقاله می‌توانید از <a href="http://goo.gl/forms/z4QtT1sQyU" target="_blank">اینجـــــا</a> اقدام نمایید.</h6>
         </section>
 
+        <section class="venue-page">
+            <div class="venue-info">
+                <div class="venue-text">
+                    <h4>محل برگزاری: مرکز همایش‌های صدرا</h4>
+                    <p>تهران، میدان ونک، خیابان ملاصدرا، خیابان شیخ بهایی جنوبی</p>
+                </div>
+            </div>
+            <a class="map" href="https://www.google.com/maps/place/35%C2%B045'11.1%22N+51%C2%B023'47.1%22E/@35.7530836,51.3945855,17z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0?hl=en-US" target="_blank"></a>
+            <!--<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3237.904252210312!2d51.39485436652129!3d35.753158068444684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzXCsDQ1JzExLjQiTiA1McKwMjMnNDcuMCJF!5e0!3m2!1sen!2snl!4v1460540011164" frameborder="0" allowfullscreen></iframe>-->
+        </section>
+
         <section class="coming-soon-page">
             <h3>به زودی اطلاعات تکمیلی منتشر می‌شود.</h3>
         </section>
-
 
 
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
@@ -54,7 +64,9 @@
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
 
-        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+
+
+        <!-- Google Analytics -->
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
             function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
