Use sample caricature

--- a/src/index.html
+++ b/src/index.html
@@ -23,10 +23,10 @@
         </section>
 
         <section class="first-page">
-            <h1>Coder Conf</h1>
-            <h2>گردهمایی گسترده‌ برنامه‌نویسان ایران</h2>
-            <h2>در تهران</h2>
+            <!--<h1>Coder Conf</h1>-->
+            <!--<h2>گردهمایی گسترده‌ برنامه‌نویسان ایران</h2>-->
             <h2>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
+            <h2>در تهران</h2>
         </section>
 
         <section class="description-page">
