--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
         <![endif]-->
 
         <section class="caricature-page">
+            <div class="eyes"></div>
         </section>
+
 
         <section class="first-page">
             <!--<h1>Coder Conf</h1>-->
