--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,9 @@
         <![endif]-->
 
         <section class="caricature-page">
-            <div class="eyes"></div>
+            <div class="caricature-image">
+                <div class="eyes"></div>
+            </div>
         </section>
 
 
