--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Coder Conf</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -22,6 +22,7 @@
         <section class="caricature-page">
             <div class="caricature-image">
                 <div class="eyes"></div>
+                <div class="click"></div>
             </div>
         </section>
 
