org chart for board

--- a/src/index.html
+++ b/src/index.html
@@ -37,6 +37,36 @@
         <section class="description-page">
             <p>پس از برگزاری اولین همایش PHP در آخرین پنجشنبه مرداد ۱۳۹۴ در حال برگزاری همایش گسترده‌‌تر برنامه‌نویسی در ایران با نام Coder Conf هستیم.</p>
             <p>            همایش Coder Conf پیش رو شامل دو بورد Server-side و Client-side خواهد بود. همچنین لازم به توضیح است بورد Server-side متشکل از زبان‌های PHP، Java، Node.js، Python و بورد Client-side شامل HTML، JavaScript و CSS است.</p>
+
+
+
+            <div class="tree">
+                <ul>
+                    <li>
+                        <a href="#">Coder Conf</a>
+                        <ul>
+                            <li>
+                                <a href="#">Server Side</a>
+                                <ul>
+                                    <li><a href="#">PHP</a></li>
+                                    <li><a href="#">Java</a></li>
+                                    <li><a href="#">Python</a></li>
+                                    <li><a href="#">Node.js</a></li>
+                                </ul>
+                            </li>
+                            <li>
+                                <a href="#">Client Side</a>
+                                <ul>
+                                    <li><a href="#">Html</a></li>
+                                    <li><a href="#">Css</a></li>
+                                    <li><a href="#">JavaScript</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
+
         </section>
 
         <section class="article-page">
