Changed style board chart

--- a/src/index.html
+++ b/src/index.html
@@ -40,33 +40,32 @@
 
 
 
-            <div class="tree">
+            <div class="board-chart">
                 <ul>
                     <li>
-                        <a href="#">Coder Conf</a>
+                        <a>Coder Conf</a>
                         <ul>
                             <li>
-                                <a href="#">Server Side</a>
+                                <a>Server Side</a>
                                 <ul>
-                                    <li><a href="#">PHP</a></li>
-                                    <li><a href="#">Java</a></li>
-                                    <li><a href="#">Python</a></li>
-                                    <li><a href="#">Node.js</a></li>
+                                    <li><a>PHP</a></li>
+                                    <li><a>Java</a></li>
+                                    <li><a>Python</a></li>
+                                    <li><a>Node.js</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#">Client Side</a>
+                                <a>Client Side</a>
                                 <ul>
-                                    <li><a href="#">Html</a></li>
-                                    <li><a href="#">Css</a></li>
-                                    <li><a href="#">JavaScript</a></li>
+                                    <li><a>Html</a></li>
+                                    <li><a>Css</a></li>
+                                    <li><a>JavaScript</a></li>
                                 </ul>
                             </li>
                         </ul>
                     </li>
                 </ul>
             </div>
-
         </section>
 
         <section class="article-page">
