Updated chart style

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
 
 
 
-            <div class="tree">
+            <div class="board-chart">
                 <ul>
                     <li>
                         <a href="#">Coder Conf</a>
