Updated meta tags and configs

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,32 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="fa">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Coder Conf</title>
-        <meta name="description" content="">
+        <meta name="description" content="همایش کودر کانف">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="author" content="Mostafa Mirmousavi">
+        <meta name="keywords" content="coderconf, coder, phpconf, کودر کانف, همایش, همایش برنامه نویسی, کدر کانف">
 
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
+        <meta property="og:type" content="website">
+        <meta property="og:site_name" content="Coder Conf">
+        <meta property="og:url" content="http://coderconf.org/">
+        <meta property="og:title" content="کودر کانف">
+        <meta property="og:description" content="​گردهمایی بزرگ برنامه‌نویسان ایران">
+        <meta property="og:image" content="http://coderconf.org/img/coderconf.jpg">
+
+        <meta name="twitter:card" content="summary">
+        <meta name="twitter:url" content="http://coderconf.org/">
+        <meta name="twitter:domain" content="http://coderconf.org/">
+        <meta name="twitter:title" content="کودر کانف">
+        <meta name="twitter:description" content="​گردهمایی بزرگ برنامه‌نویسان ایران">
+        <meta name="twitter:image" content="http://coderconf.org/img/coderconf.jpg">
+
+        <link rel="author" href="humans.txt">
+
+        <link rel="apple-touch-icon" href="img/apple-touch-icon.jpg">
+        <link rel="icon" type="image/png" href="img/favicon.jpg">
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
