--- a/src/index.html
+++ b/src/index.html
@@ -106,8 +106,21 @@
             <!--<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3237.904252210312!2d51.39485436652129!3d35.753158068444684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzXCsDQ1JzExLjQiTiA1McKwMjMnNDcuMCJF!5e0!3m2!1sen!2snl!4v1460540011164" frameborder="0" allowfullscreen></iframe>-->
         </section>
 
+
         <section class="coming-soon-page">
             <h3>به زودی اطلاعات تکمیلی منتشر می‌شود.</h3>
+        </section>
+
+        <section class="contact-page">
+            <ul>
+                <li><a href="#">info [at] coderconf [dot] ir</a></li>
+                <li><a href="#">http://facebook.com/coderconf.ir</a></li>
+                <li><a href="#">http://twitter.com/coderconf.ir</a></li>
+                <li><a href="#">http://instagram.com/coderconf.ir</a></li>
+                <li><a href="#">https://telegram.me/coderconf.ir</a></li>
+                <li><a href="#">0912 395 29 60</a></li>
+                <li><a href="#">#coderconf</a></li>
+            </ul>
         </section>
 
 
