--- a/src/index.html
+++ b/src/index.html
@@ -30,6 +30,7 @@
 
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="font/fontello/css/fontello.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -107,19 +108,20 @@
         </section>
 
 
-        <section class="coming-soon-page">
+        <!--<section class="coming-soon-page">
             <h3>به زودی اطلاعات تکمیلی منتشر می‌شود.</h3>
-        </section>
+        </section>-->
 
         <section class="contact-page">
+            <i class="icon icon-chat1"></i>
             <ul>
-                <li><a href="#">info [at] coderconf [dot] ir</a></li>
-                <li><a href="#">http://facebook.com/coderconf.ir</a></li>
-                <li><a href="#">http://twitter.com/coderconf.ir</a></li>
-                <li><a href="#">http://instagram.com/coderconf.ir</a></li>
-                <li><a href="#">https://telegram.me/coderconf.ir</a></li>
-                <li><a href="#">0912 395 29 60</a></li>
-                <li><a href="#">#coderconf</a></li>
+                <li><a href="#"><i class="icon-email"></i> info [at] coderconf [dot] ir</a></li>
+                <li><a href="#"><i class="icon-facebook-rect"></i> http://facebook.com/coderconf.ir</a></li>
+                <li><a href="#"><i class="icon-twitter-rect"></i> http://twitter.com/coderconf.ir</a></li>
+                <li><a href="#"><i class="icon-instagram"></i> http://instagram.com/coderconf.ir</a></li>
+                <li><a href="#"><i class="icon-chat-1"></i> https://telegram.me/coderconf.ir</a></li>
+                <li><a href="#"><i class="icon-mobile"></i> 0912 395 29 60</a></li>
+                <li><a href="#"><i class="icon-hash"></i> coderconf</a></li>
             </ul>
         </section>
 
