--- a/src/index.html
+++ b/src/index.html
@@ -88,10 +88,10 @@
         </section>
 
         <section class="article-page">
-            <p>            جهت ارسال مقاله مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۳ تا ۱۰ خط) مقاله خود را به همراه کلمات کلیدی، تا تاریخ ۳۰ اردیبهشت برای ما ارسال نمایید.</p>
-            <p>            در صورت تایید اولیه مقاله‌ها می‌توانید مقاله نهایی خود را تا تاریخ ۳۰ خرداد برای ما ارسال نمایید تا در صورت تائید، مقاله‌ی شما با نام شما در کتاب الکترونیکی همایش منتشر شود.</p>
+            <p> جهت ارسال مقاله‌ی مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۳ تا ۱۰ خط) مقاله‌ی خود را به همراه کلمات کلیدی، تا تاریخ <strong>۱۰ خرداد</strong> برای ما ارسال نمایید.</p>
+            <p> در صورت تایید اولیه مقاله‌ها، می‌توانید مقاله‌ی نهایی خود را تا تاریخ<strong> ۱۰ تیر</strong> برای ما ارسال نمایید تا در صورت تائید، مقاله‌ی شما با نام شما در کتاب الکترونیکی همایش منتشر شود.</p>
             <p>مقاله‌های برتر توسط نویسنده در روز همایش ارائه خواهد شد.</p>
-            <p>همچنین می‌توانید در مورد فعالیت و پروژه‌های متن‌باز مرتبط با بورد‌های همایش مقاله ارسال نمایید.</p>
+            <p>همچنین می‌توانید در مورد فعالیت و پروژه‌های متن‌باز مرتبط با بورد‌های همایش، مقاله ارسال نمایید.</p>
 
             <h6 class="submit-text">جهت ارسال مقاله می‌توانید از <a href="http://goo.gl/forms/z4QtT1sQyU" target="_blank">اینجـــــا</a> اقدام نمایید.</h6>
         </section>
