--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,13 @@
         </div>
 
 
+        <div class="languages">
+            <ul>
+                <li class="active"><a href="en"><img src="img/persian.png"/> Persian</a></li>
+                <li class="inactive"><a href="en"><img src="img/english.png"/> English</a></li>
+            </ul>
+        </div>
+
         <section class="caricature-page">
             <div class="caricature-image">
                 <div class="eyes"></div>
@@ -151,7 +158,7 @@
             e=o.createElement(i);r=o.getElementsByTagName(i)[0];
             e.src='https://www.google-analytics.com/analytics.js';
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-            ga('create','UA-XXXXX-X','auto');ga('send','pageview');
+            ga('create','UA-57178802-2','auto');ga('send','pageview');
         </script>
     </body>
 </html>
