--- a/src/index.html
+++ b/src/index.html
@@ -50,26 +50,26 @@
             </ul>
         </div>
 
-        <section class="caricature-page">
+        <section class="page caricature-page">
             <div class="caricature-image">
                 <div class="eyes"></div>
                 <div class="click"></div>
             </div>
         </section>
 
-
-        <section class="first-page">
-            <!--<h1>Coder Conf</h1>-->
-            <!--<h2>گردهمایی گسترده‌ برنامه‌نویسان ایران</h2>-->
+        <section class="page first-page bg-animation">
+            <div class="free-space-10"></div>
+            <h1>Coder Conf</h1>
             <h2>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
             <h2>در تهران</h2>
         </section>
 
-        <section class="description-page">
+        <section class="page description-page">
+            <div class="free-space-10"></div>
             <p>پس از برگزاری اولین همایش PHP در آخرین پنجشنبه مرداد ۱۳۹۴ در حال برگزاری همایش گسترده‌‌تر برنامه‌نویسی در ایران با نام Coder Conf هستیم.</p>
             <p>            همایش Coder Conf پیش رو شامل دو بورد Server-side و Client-side خواهد بود. همچنین لازم به توضیح است بورد Server-side متشکل از زبان‌های PHP، Java، Node.js، Python و بورد Client-side شامل HTML، JavaScript و CSS است.</p>
 
-
+            <div class="clear"></div>
 
             <div class="board-chart">
                 <ul>
@@ -97,9 +97,15 @@
                     </li>
                 </ul>
             </div>
+
+            <div class="clear"></div>
+
         </section>
 
-        <section class="article-page">
+        <div class="divider"></div>
+
+        <section class="page article-page">
+            <div class="free-space-10"></div>
             <p> جهت ارسال مقاله‌ی مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۳ تا ۱۰ خط) مقاله‌ی خود را به همراه کلمات کلیدی، تا تاریخ <strong>۱۰ خرداد</strong> برای ما ارسال نمایید.</p>
             <p> در صورت تایید اولیه مقاله‌ها، می‌توانید مقاله‌ی نهایی خود را تا تاریخ<strong> ۱۰ تیر</strong> برای ما ارسال نمایید تا در صورت تائید، مقاله‌ی شما با نام شما در کتاب الکترونیکی همایش منتشر شود.</p>
             <p>مقاله‌های برتر توسط نویسنده در روز همایش ارائه خواهد شد.</p>
@@ -108,7 +114,20 @@
             <h6 class="submit-text">جهت ارسال مقاله می‌توانید از <a href="http://goo.gl/forms/z4QtT1sQyU" target="_blank">اینجـــــا</a> اقدام نمایید.</h6>
         </section>
 
-        <section class="venue-page">
+        <section class="iran-symbol">
+        </section>
+
+        <section class="page poster-page">
+            <div class="free-space-10"></div>
+            <h6>پوستر جذب مقاله</h6>
+            <a href="img/poster.jpg" target="_blank">
+                <img src="img/poster-m.jpg" alt="Coder Conf Poster">
+            </a>
+            <div class="free-space-10"></div>
+        </section>
+
+
+        <section class="page venue-page">
             <div class="venue-info">
                 <div class="venue-text">
                     <h4>محل برگزاری: مرکز همایش‌های صدرا</h4>
@@ -120,8 +139,8 @@
         </section>
 
 
-        <section class="contact-page">
-            <i class="icon icon-chat1"></i>
+        <section class="page contact-page bg-animation">
+            <div class="free-space-10"></div>
             <ul>
                 <li><a href="http://www.google.com/recaptcha/mailhide/d?k=01U3qq6mU_DOpc3KCp-AooUg==&amp;c=mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501U3qq6mU_DOpc3KCp-AooUg\75\75\46c\75mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address"><i class="icon-email"></i> info [at] coderconf [dot] org</a></li>
                 <li><a href="http://facebook.com/coderconf" target="_blank"><i class="icon-facebook-rect"></i> http://facebook.com/coderconf</a></li>
@@ -134,11 +153,15 @@
         </section>
 
         <section class="coming-soon-page">
+            <div class="free-space-10"></div>
             <p>به زودی اطلاعات تکمیلی منتشر می‌شود.</p>
+            <div class="free-space-10"></div>
         </section>
 
-        <!--<section class="footer">
-        </section>-->
+        <section class="footer">
+            <p>Copyright © 2016 Coder Conf</p>
+            <!--<p>تصویرسازی توسط علی پاکنهاد، طراحی سایت توسط مصطفی میرموسوی</p>-->
+        </section>
 
 
         <script src="https://code.jquery.com/jquery-{{JQUERY_VERSION}}.min.js"></script>
