--- a/src/index.html
+++ b/src/index.html
@@ -139,7 +139,7 @@
         </section>
 
 
-        <section class="page contact-page bg-animation">
+        <section class="page contact-page">
             <div class="free-space-10"></div>
             <ul>
                 <li><a href="http://www.google.com/recaptcha/mailhide/d?k=01U3qq6mU_DOpc3KCp-AooUg==&amp;c=mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501U3qq6mU_DOpc3KCp-AooUg\75\75\46c\75mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address"><i class="icon-email"></i> info [at] coderconf [dot] org</a></li>
@@ -152,15 +152,19 @@
             </ul>
         </section>
 
-        <section class="coming-soon-page">
+
+
+
+
+
+        <!--<section class="coming-soon-page">
             <div class="free-space-10"></div>
             <p>به زودی اطلاعات تکمیلی منتشر می‌شود.</p>
             <div class="free-space-10"></div>
-        </section>
+        </section>-->
 
         <section class="footer">
             <p>Copyright © 2016 Coder Conf</p>
-            <!--<p>تصویرسازی توسط علی پاکنهاد، طراحی سایت توسط مصطفی میرموسوی</p>-->
         </section>
 
 
