--- a/src/index.html
+++ b/src/index.html
@@ -127,29 +127,28 @@
         </section>
 
 
-        <section class="page venue-page">
-            <div class="venue-info">
-                <div class="venue-text">
-                    <h4>محل برگزاری: مرکز همایش‌های صدرا</h4>
-                    <p>تهران، میدان ونک، خیابان ملاصدرا، خیابان شیخ بهایی جنوبی</p>
-                </div>
-            </div>
-            <a class="map" href="https://www.google.com/maps/place/35%C2%B045'11.1%22N+51%C2%B023'47.1%22E/@35.7530836,51.3945855,17z/data=!3m1!4b1!4m2!3m1!1s0x0:0x0?hl=en-US" target="_blank"></a>
-            <!--<iframe class="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3237.904252210312!2d51.39485436652129!3d35.753158068444684!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzXCsDQ1JzExLjQiTiA1McKwMjMnNDcuMCJF!5e0!3m2!1sen!2snl!4v1460540011164" frameborder="0" allowfullscreen></iframe>-->
+        <section class="venue-page">
+            <p><strong>محل برگزاری:</strong> تهران، میدان ونک، خیابان ملاصدرا، خیابان شیخ بهایی جنوبی، مرکز همایش‌های صدرا</p>
+            <div id="map"></div>
         </section>
 
 
-        <section class="page contact-page">
+
+        <section class="contact-page">
+            <div class="free-space-10"></div>
+            <div class="free-space-10"></div>
             <div class="free-space-10"></div>
             <ul>
-                <li><a href="http://www.google.com/recaptcha/mailhide/d?k=01U3qq6mU_DOpc3KCp-AooUg==&amp;c=mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501U3qq6mU_DOpc3KCp-AooUg\75\75\46c\75mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="Reveal this e-mail address"><i class="icon-email"></i> info [at] coderconf [dot] org</a></li>
-                <li><a href="http://facebook.com/coderconf" target="_blank"><i class="icon-facebook-rect"></i> http://facebook.com/coderconf</a></li>
-                <li><a href="http://twitter.com/coderconf" target="_blank"><i class="icon-twitter-rect"></i> http://twitter.com/coderconf</a></li>
-                <li><a href="http://instagram.com/coderconf" target="_blank"><i class="icon-instagram"></i> http://instagram.com/coderconf</a></li>
-                <li><a href="https://telegram.me/coderconf" target="_blank"><i class="icon-chat-1"></i> https://telegram.me/coderconf</a></li>
-                <li><a href="tel:+989123952960"><i class="icon-mobile"></i> +98 912 395 29 60</a></li>
-                <li><a href="#"><i class="icon-hash"></i> coderconf</a></li>
+                <li><a href="http://www.google.com/recaptcha/mailhide/d?k=01U3qq6mU_DOpc3KCp-AooUg==&amp;c=mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501U3qq6mU_DOpc3KCp-AooUg\75\75\46c\75mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="info[at]gmail[dot]org"><i class="icon-email"></i>ایمیل</a></li>
+                <li><a href="tel:+989123952960" title="09123952960"><i class="icon-mobile"></i>تلفن</a></li>
+                <li><a href="http://facebook.com/coderconf" target="_blank" title="http://facebook.com/coderconf"><i class="icon-facebook-rect"></i>فیسبوک</a></li>
+                <li><a href="http://twitter.com/coderconf" target="_blank" title="http://twitter.com/coderconf"><i class="icon-twitter-rect"></i>تویتر</a></li>
+                <li><a href="http://instagram.com/coderconf" target="_blank" title="http://instagram.com/coderconf"><i class="icon-instagram"></i>اینستاگرام</a></li>
+                <li><a href="https://telegram.me/coderconf" target="_blank" title="https://telegram.me/coderconf"><i class="icon-chat-1"></i>تلگرام</a></li>
+                <!--<li><a href="#"><i class="icon-hash"></i> coderconf</a></li>-->
             </ul>
+            <p>می‌توانید ما را با هشنگ coderconf# در شبکه‌های اجتماعی دنبال کنید</p>
+            <div class="free-space-10"></div>
         </section>
 
 
@@ -172,6 +171,8 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhTq-bkJmTKh7PIm69E8d7zAP11XMB24I&callback=initMap&sensor=false&language=fa&region=IR"
+                async defer></script>
 
 
         <script>
