--- a/src/index.html
+++ b/src/index.html
@@ -31,6 +31,7 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="font/fontello/css/fontello.css">
+
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
     </head>
     <body>
@@ -59,19 +60,19 @@
 
         <section class="page first-page bg-animation">
             <div class="free-space-10"></div>
-            <h1>Coder Conf</h1>
-            <h2>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
-            <h2>در تهران</h2>
+            <h1 data-animate-scroll='{"y":"50", "duration": "0.8", "alpha": "0.1", "scaleX": "0", "scaleY": "0"}'>Coder Conf</h1>
+            <h2 data-animate-scroll='{"y":"50", "duration": "1", "alpha": "0.1", "scaleX": "0", "scaleY": "0"}'>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
+            <h2 data-animate-scroll='{"y":"50", "duration": "1.4", "alpha": "0.1", "scaleX": "0", "scaleY": "0", "rotation": "180"}'>در تهران</h2>
         </section>
 
         <section class="page description-page">
             <div class="free-space-10"></div>
-            <p>پس از برگزاری اولین همایش PHP در آخرین پنجشنبه مرداد ۱۳۹۴ در حال برگزاری همایش گسترده‌‌تر برنامه‌نویسی در ایران با نام Coder Conf هستیم.</p>
-            <p>            همایش Coder Conf پیش رو شامل دو بورد Server-side و Client-side خواهد بود. همچنین لازم به توضیح است بورد Server-side متشکل از زبان‌های PHP، Java، Node.js، Python و بورد Client-side شامل HTML، JavaScript و CSS است.</p>
+            <p data-animate-scroll='{"duration": "1.5", "alpha": "0"}'>پس از برگزاری اولین همایش PHP در آخرین پنجشنبه مرداد ۱۳۹۴ در حال برگزاری همایش گسترده‌‌تر برنامه‌نویسی در ایران با نام Coder Conf هستیم.</p>
+            <p data-animate-scroll='{"duration": "2.5", "alpha": "0"}'>            همایش Coder Conf پیش رو شامل دو بورد Server-side و Client-side خواهد بود. همچنین لازم به توضیح است بورد Server-side متشکل از زبان‌های PHP، Java، Node.js، Python و بورد Client-side شامل HTML، JavaScript و CSS است.</p>
 
             <div class="clear"></div>
 
-            <div class="board-chart">
+            <div class="board-chart" data-animate-scroll='{"duration": "1","y": "300", "alpha": "0.1", "scaleX": "0"}'>
                 <ul>
                     <li>
                         <a>Coder Conf</a>
@@ -106,12 +107,12 @@
 
         <section class="page article-page">
             <div class="free-space-10"></div>
-            <p> جهت ارسال مقاله‌ی مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۳ تا ۱۰ خط) مقاله‌ی خود را به همراه کلمات کلیدی، تا تاریخ <strong>۱۰ خرداد</strong> برای ما ارسال نمایید.</p>
-            <p> در صورت تایید اولیه مقاله‌ها، می‌توانید مقاله‌ی نهایی خود را تا تاریخ<strong> ۱۰ تیر</strong> برای ما ارسال نمایید تا در صورت تائید، مقاله‌ی شما با نام شما در کتاب الکترونیکی همایش منتشر شود.</p>
-            <p>مقاله‌های برتر توسط نویسنده در روز همایش ارائه خواهد شد.</p>
-            <p>همچنین می‌توانید در مورد فعالیت و پروژه‌های متن‌باز مرتبط با بورد‌های همایش، مقاله ارسال نمایید.</p>
+            <p data-animate-scroll='{"duration": "0.8", "x": "-500", "y": "150", "alpha": "0"}'> جهت ارسال مقاله‌ی مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۳ تا ۱۰ خط) مقاله‌ی خود را به همراه کلمات کلیدی، تا تاریخ <strong>۱۰ خرداد</strong> برای ما ارسال نمایید.</p>
+            <p data-animate-scroll='{"duration": "1.0", "x": "-500", "y": "150", "alpha": "0"}'> در صورت تایید اولیه مقاله‌ها، می‌توانید مقاله‌ی نهایی خود را تا تاریخ<strong> ۱۰ تیر</strong> برای ما ارسال نمایید تا در صورت تائید، مقاله‌ی شما با نام شما در کتاب الکترونیکی همایش منتشر شود.</p>
+            <p data-animate-scroll='{"duration": "1.2", "x": "-500", "y": "150", "alpha": "0"}'>مقاله‌های برتر توسط نویسنده در روز همایش ارائه خواهد شد.</p>
+            <p data-animate-scroll='{"duration": "1.4", "x": "-500", "y": "150", "alpha": "0"}'>همچنین می‌توانید در مورد فعالیت و پروژه‌های متن‌باز مرتبط با بورد‌های همایش، مقاله ارسال نمایید.</p>
 
-            <h6 class="submit-text">جهت ارسال مقاله می‌توانید از <a href="http://goo.gl/forms/z4QtT1sQyU" target="_blank">اینجـــــا</a> اقدام نمایید.</h6>
+            <h6 class="submit-text" data-animate-scroll='{"duration": "1.5", "y": "220", "alpha": "0"}'>جهت ارسال مقاله می‌توانید از <a href="http://goo.gl/forms/z4QtT1sQyU" target="_blank">اینجـــــا</a> اقدام نمایید.</h6>
         </section>
 
         <section class="iran-symbol">
@@ -139,15 +140,21 @@
             <div class="free-space-10"></div>
             <div class="free-space-10"></div>
             <ul>
-                <li><a href="http://www.google.com/recaptcha/mailhide/d?k=01U3qq6mU_DOpc3KCp-AooUg==&amp;c=mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501U3qq6mU_DOpc3KCp-AooUg\75\75\46c\75mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="info[at]gmail[dot]org"><i class="icon-email"></i>ایمیل</a></li>
-                <li><a href="tel:+989123952960" title="09123952960"><i class="icon-mobile"></i>تلفن</a></li>
-                <li><a href="http://facebook.com/coderconf" target="_blank" title="http://facebook.com/coderconf"><i class="icon-facebook-rect"></i>فیسبوک</a></li>
-                <li><a href="http://twitter.com/coderconf" target="_blank" title="http://twitter.com/coderconf"><i class="icon-twitter-rect"></i>تویتر</a></li>
-                <li><a href="http://instagram.com/coderconf" target="_blank" title="http://instagram.com/coderconf"><i class="icon-instagram"></i>اینستاگرام</a></li>
-                <li><a href="https://telegram.me/coderconf" target="_blank" title="https://telegram.me/coderconf"><i class="icon-chat-1"></i>تلگرام</a></li>
+                <li data-animate-scroll='{"duration": "0.6", "y": "-100", "alpha": "0.1"}'
+                    ><a href="http://www.google.com/recaptcha/mailhide/d?k=01U3qq6mU_DOpc3KCp-AooUg==&amp;c=mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501U3qq6mU_DOpc3KCp-AooUg\75\75\46c\75mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="info[at]gmail[dot]org"><i class="icon-email"></i>ایمیل</a></li>
+                <li data-animate-scroll='{"duration": "1.0", "y": "-100", "alpha": "0.1"}'
+                    ><a href="tel:+989123952960" title="09123952960"><i class="icon-mobile"></i>تلفن</a></li>
+                <li data-animate-scroll='{"duration": "1.4", "y": "-100", "alpha": "0.1"}'
+                    ><a href="http://facebook.com/coderconf" target="_blank" title="http://facebook.com/coderconf"><i class="icon-facebook-rect"></i>فیسبوک</a></li>
+                <li data-animate-scroll='{"duration": "1.8", "y": "-100", "alpha": "0.1"}'
+                    ><a href="http://twitter.com/coderconf" target="_blank" title="http://twitter.com/coderconf"><i class="icon-twitter-rect"></i>تویتر</a></li>
+                <li data-animate-scroll='{"duration": "2.2", "y": "-100", "alpha": "0.1"}'
+                    ><a href="http://instagram.com/coderconf" target="_blank" title="http://instagram.com/coderconf"><i class="icon-instagram"></i>اینستاگرام</a></li>
+                <li data-animate-scroll='{"duration": "2.6", "y": "-100", "alpha": "0.1"}'
+                    ><a href="https://telegram.me/coderconf" target="_blank" title="https://telegram.me/coderconf"><i class="icon-chat-1"></i>تلگرام</a></li>
                 <!--<li><a href="#"><i class="icon-hash"></i> coderconf</a></li>-->
             </ul>
-            <p>می‌توانید ما را با هشنگ coderconf# در شبکه‌های اجتماعی دنبال کنید</p>
+            <p data-animate-scroll='{"duration": "5", "alpha": "0"}'>می‌توانید ما را با هشتگ coderconf# در شبکه‌های اجتماعی دنبال کنید</p>
             <div class="free-space-10"></div>
         </section>
 
@@ -173,12 +180,16 @@
         <script src="js/main.js"></script>
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhTq-bkJmTKh7PIm69E8d7zAP11XMB24I&callback=initMap&sensor=false&language=fa&region=IR"
                 async defer></script>
+        <script src="js/vendor/animate-scroll.js"></script>
+        <script src="js/vendor/TweenMax.min.js"></script>
+
 
 
         <script>
             $(window).load(function() {
                 window.scrollTo(0, 0);
                 $(".loading").fadeOut('slow');
+                $(document).animateScroll();
             });
         </script>
 
