--- a/src/index.html
+++ b/src/index.html
@@ -41,6 +41,7 @@
 
         <div class="loading">
             <div class="cssload-loader"></div>
+            <p>در حال بارگذاری ...</p>
         </div>
 
 
