--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
         <title>Coder Conf</title>
         <meta name="description" content="همایش کودر کانف">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="author" content="Mostafa Mirmousavi">
         <meta name="keywords" content="coderconf, coder, phpconf, کودر کانف, همایش, همایش برنامه نویسی, کدر کانف">
 
         <meta property="og:type" content="website">
@@ -59,12 +58,15 @@
             </div>
         </section>
 
+        <div class="divider"></div>
         <section class="page first-page bg-animation">
             <div class="free-space-10"></div>
             <h1 data-animate-scroll='{"y":"50", "duration": "0.8", "alpha": "0.1", "scaleX": "0", "scaleY": "0"}'>Coder Conf</h1>
             <h2 data-animate-scroll='{"y":"50", "duration": "1", "alpha": "0.1", "scaleX": "0", "scaleY": "0"}'>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
             <h2 data-animate-scroll='{"y":"50", "duration": "1.4", "alpha": "0.1", "scaleX": "0", "scaleY": "0", "rotation": "180"}'>در تهران</h2>
         </section>
+        <div class="divider"></div>
+
 
         <section class="page description-page">
             <div class="free-space-10"></div>
@@ -139,7 +141,6 @@
         <section class="contact-page">
             <div class="free-space-10"></div>
             <div class="free-space-10"></div>
-            <div class="free-space-10"></div>
             <ul>
                 <li data-animate-scroll='{"duration": "0.6", "y": "-100", "alpha": "0.1"}'
                     ><a href="http://www.google.com/recaptcha/mailhide/d?k=01U3qq6mU_DOpc3KCp-AooUg==&amp;c=mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501U3qq6mU_DOpc3KCp-AooUg\75\75\46c\75mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="info[at]gmail[dot]org"><i class="icon-email"></i>ایمیل</a></li>
@@ -170,6 +171,8 @@
             <div class="free-space-10"></div>
         </section>-->
 
+        <div class="divider"></div>
+
         <section class="footer">
             <p>Copyright © 2016 Coder Conf</p>
         </section>
@@ -179,7 +182,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhTq-bkJmTKh7PIm69E8d7zAP11XMB24I&callback=initMap&sensor=false&language=fa&region=IR"
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKtzZhf7t_2pzkspGSp3H3AgPgpQT-6BA&amp;callback=initMap&amp;sensor=false&amp;language=fa&amp;region=IR"
                 async defer></script>
         <script src="js/vendor/animate-scroll.js"></script>
         <script src="js/vendor/TweenMax.min.js"></script>
