Fix content effect

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Coder Conf</title>
-        <meta name="description" content="همایش کودر کانف">
+        <meta name="description" content="کودر کانف">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="coderconf, coder, phpconf, کودر کانف, همایش, همایش برنامه نویسی, کدر کانف">
 
@@ -46,8 +46,8 @@
 
         <div class="languages">
             <ul>
-                <li class="active"><a href="#"><img src="img/persian.png"/> Persian</a></li>
-                <li class="inactive"><a href="en"><img src="img/english.png"/> English</a></li>
+                <li class="active"><a href="http://coderconf.org/fa"><img src="img/persian.png"/> Persian</a></li>
+                <li class="inactive"><a href="http://coderconf.org/en"><img src="img/english.png"/> English</a></li>
             </ul>
         </div>
 
@@ -61,9 +61,9 @@
         <div class="divider"></div>
         <section class="page first-page bg-animation">
             <div class="free-space-10"></div>
-            <h1 data-animate-scroll='{"y":"50", "duration": "0.8", "alpha": "0.1", "scaleX": "0", "scaleY": "0"}'>Coder Conf</h1>
-            <h2 data-animate-scroll='{"y":"50", "duration": "1", "alpha": "0.1", "scaleX": "0", "scaleY": "0"}'>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
-            <h2 data-animate-scroll='{"y":"50", "duration": "1.4", "alpha": "0.1", "scaleX": "0", "scaleY": "0", "rotation": "180"}'>در تهران</h2>
+            <h1 data-animate-scroll='{"duration": "0.8", "alpha": "0"}'>Coder Conf</h1>
+            <h2 data-animate-scroll='{"duration": "1.2", "alpha": "0"}'>آخرین پنجشنبه مرداد ۱۳۹۵</h2>
+            <h2 data-animate-scroll='{"duration": "1.6", "alpha": "0"}'>در تهران</h2>
         </section>
         <div class="divider"></div>
 
@@ -75,7 +75,7 @@
 
             <div class="clear"></div>
 
-            <div class="board-chart" data-animate-scroll='{"duration": "1","y": "300", "alpha": "0.1", "scaleX": "0"}'>
+            <div class="board-chart" data-animate-scroll='{"duration": "1","y": "100", "alpha": "0"}'>
                 <ul>
                     <li>
                         <a>Coder Conf</a>
@@ -110,12 +110,12 @@
 
         <section class="page article-page">
             <div class="free-space-10"></div>
-            <p data-animate-scroll='{"duration": "0.8", "x": "-500", "y": "150", "alpha": "0"}'> جهت ارسال مقاله‌ی مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۳ تا ۱۰ خط) مقاله‌ی خود را به همراه کلمات کلیدی، تا تاریخ <strong>۱۰ خرداد</strong> برای ما ارسال نمایید.</p>
-            <p data-animate-scroll='{"duration": "1.0", "x": "-500", "y": "150", "alpha": "0"}'> در صورت تایید اولیه مقاله‌ها، می‌توانید مقاله‌ی نهایی خود را تا تاریخ<strong> ۱۰ تیر</strong> برای ما ارسال نمایید تا در صورت تائید، مقاله‌ی شما با نام شما در کتاب الکترونیکی همایش منتشر شود.</p>
-            <p data-animate-scroll='{"duration": "1.2", "x": "-500", "y": "150", "alpha": "0"}'>مقاله‌های برتر توسط نویسنده در روز همایش ارائه خواهد شد.</p>
-            <p data-animate-scroll='{"duration": "1.4", "x": "-500", "y": "150", "alpha": "0"}'>همچنین می‌توانید در مورد فعالیت و پروژه‌های متن‌باز مرتبط با بورد‌های همایش، مقاله ارسال نمایید.</p>
+            <p data-animate-scroll='{"duration": "0.8", "alpha": "0"}'> جهت ارسال مقاله‌ی مرتبط با بورد‌های Server-side و Client-side می‌توانید موضوع و چکیده (حدود ۳ تا ۱۰ خط) مقاله‌ی خود را به همراه کلمات کلیدی، تا تاریخ <strong>۱۰ خرداد</strong> برای ما ارسال نمایید.</p>
+            <p data-animate-scroll='{"duration": "1.0", "alpha": "0"}'> در صورت تایید اولیه مقاله‌ها، می‌توانید مقاله‌ی نهایی خود را تا تاریخ<strong> ۱۰ تیر</strong> برای ما ارسال نمایید تا در صورت تائید، مقاله‌ی شما با نام شما در کتاب الکترونیکی همایش منتشر شود.</p>
+            <p data-animate-scroll='{"duration": "1.2", "alpha": "0"}'>مقاله‌های برتر توسط نویسنده در روز همایش ارائه خواهد شد.</p>
+            <p data-animate-scroll='{"duration": "1.4", "alpha": "0"}'>همچنین می‌توانید در مورد فعالیت و پروژه‌های متن‌باز مرتبط با بورد‌های همایش، مقاله ارسال نمایید.</p>
 
-            <h6 class="submit-text" data-animate-scroll='{"duration": "1.5", "y": "220", "alpha": "0"}'>جهت ارسال مقاله می‌توانید از <a href="http://goo.gl/forms/z4QtT1sQyU" target="_blank">اینجـــــا</a> اقدام نمایید.</h6>
+            <h6 class="submit-text" data-animate-scroll='{"duration": "1.6", "y": "100", "alpha": "0"}'>جهت ارسال مقاله می‌توانید از <a href="http://goo.gl/forms/z4QtT1sQyU" target="_blank">اینجـــــا</a> اقدام نمایید.</h6>
         </section>
 
         <section class="iran-symbol">
@@ -142,25 +142,23 @@
             <div class="free-space-10"></div>
             <div class="free-space-10"></div>
             <ul>
-                <li data-animate-scroll='{"duration": "0.6", "y": "-100", "alpha": "0.1"}'
+                <li data-animate-scroll='{"duration": "0.6", "y": "-100", "alpha": "0"}'
                     ><a href="http://www.google.com/recaptcha/mailhide/d?k=01U3qq6mU_DOpc3KCp-AooUg==&amp;c=mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU=" onclick="window.open('http://www.google.com/recaptcha/mailhide/d?k\07501U3qq6mU_DOpc3KCp-AooUg\75\75\46c\75mNTuyfmu5js18rByH8crPVC1p30lepBgJMTwhaeETgU\075', '', 'toolbar=0,scrollbars=0,location=0,statusbar=0,menubar=0,resizable=0,width=500,height=300'); return false;" title="info[at]gmail[dot]org"><i class="icon-email"></i>ایمیل</a></li>
-                <li data-animate-scroll='{"duration": "1.0", "y": "-100", "alpha": "0.1"}'
+                <li data-animate-scroll='{"duration": "1.0", "y": "-100", "alpha": "0"}'
                     ><a href="tel:+989123952960" title="09123952960"><i class="icon-mobile"></i>تلفن</a></li>
-                <li data-animate-scroll='{"duration": "1.4", "y": "-100", "alpha": "0.1"}'
+                <li data-animate-scroll='{"duration": "1.4", "y": "-100", "alpha": "0"}'
                     ><a href="http://facebook.com/coderconf" target="_blank" title="http://facebook.com/coderconf"><i class="icon-facebook-rect"></i>فیسبوک</a></li>
-                <li data-animate-scroll='{"duration": "1.8", "y": "-100", "alpha": "0.1"}'
+                <li data-animate-scroll='{"duration": "1.8", "y": "-100", "alpha": "0"}'
                     ><a href="http://twitter.com/coderconf" target="_blank" title="http://twitter.com/coderconf"><i class="icon-twitter-rect"></i>تویتر</a></li>
-                <li data-animate-scroll='{"duration": "2.2", "y": "-100", "alpha": "0.1"}'
+                <li data-animate-scroll='{"duration": "2.2", "y": "-100", "alpha": "0"}'
                     ><a href="http://instagram.com/coderconf" target="_blank" title="http://instagram.com/coderconf"><i class="icon-instagram"></i>اینستاگرام</a></li>
-                <li data-animate-scroll='{"duration": "2.6", "y": "-100", "alpha": "0.1"}'
+                <li data-animate-scroll='{"duration": "2.6", "y": "-100", "alpha": "0"}'
                     ><a href="https://telegram.me/coderconf" target="_blank" title="https://telegram.me/coderconf"><i class="icon-chat-1"></i>تلگرام</a></li>
                 <!--<li><a href="#"><i class="icon-hash"></i> coderconf</a></li>-->
             </ul>
             <p data-animate-scroll='{"duration": "5", "alpha": "0"}'>می‌توانید ما را با هشتگ coderconf# در شبکه‌های اجتماعی دنبال کنید</p>
             <div class="free-space-10"></div>
         </section>
-
-
 
 
 
@@ -182,11 +180,11 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKtzZhf7t_2pzkspGSp3H3AgPgpQT-6BA&amp;callback=initMap&amp;sensor=false&amp;language=fa&amp;region=IR"
+        <!--AIzaSyBhTq-bkJmTKh7PIm69E8d7zAP11XMB24I-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKtzZhf7t_2pzkspGSp3H3AgPgpQT-6BA&amp;callback=initMap&amp;language=fa&amp;region=IR"
                 async defer></script>
         <script src="js/vendor/animate-scroll.js"></script>
         <script src="js/vendor/TweenMax.min.js"></script>
-
 
 
         <script>
