--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,19 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Coder Conf</title>
-        <meta name="description" content="کودر کانف">
+        <meta name="description" content="کدرکانف، ​گردهمایی بزرگ برنامه‌نویسان ایران">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="coderconf, coder, phpconf, کودر کانف, همایش, همایش برنامه نویسی, کدر کانف">
 
         <meta property="og:type" content="website">
         <meta property="og:site_name" content="Coder Conf">
-        <meta property="og:url" content="http://coderconf.org/">
+        <meta property="og:url" content="http://coderconf.org/fa">
         <meta property="og:title" content="کودر کانف">
         <meta property="og:description" content="​گردهمایی بزرگ برنامه‌نویسان ایران">
         <meta property="og:image" content="http://coderconf.org/img/coderconf.jpg">
 
         <meta name="twitter:card" content="summary">
-        <meta name="twitter:url" content="http://coderconf.org/">
+        <meta name="twitter:url" content="http://coderconf.org/fa">
         <meta name="twitter:domain" content="http://coderconf.org/">
         <meta name="twitter:title" content="کودر کانف">
         <meta name="twitter:description" content="​گردهمایی بزرگ برنامه‌نویسان ایران">
@@ -92,8 +92,8 @@
                             <li>
                                 <a>Client Side</a>
                                 <ul>
-                                    <li><a>Html</a></li>
-                                    <li><a>Css</a></li>
+                                    <li><a>HTML</a></li>
+                                    <li><a>CSS</a></li>
                                     <li><a>JavaScript</a></li>
                                 </ul>
                             </li>
@@ -180,8 +180,7 @@
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-{{JQUERY_VERSION}}.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
         <script src="js/main.js"></script>
-        <!--AIzaSyBhTq-bkJmTKh7PIm69E8d7zAP11XMB24I-->
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDKtzZhf7t_2pzkspGSp3H3AgPgpQT-6BA&amp;callback=initMap&amp;language=fa&amp;region=IR"
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBhTq-bkJmTKh7PIm69E8d7zAP11XMB24I&amp;callback=initMap&amp;language=fa&amp;region=IR"
                 async defer></script>
         <script src="js/vendor/animate-scroll.js"></script>
         <script src="js/vendor/TweenMax.min.js"></script>
